ldap-account-manager (7.6.DEV-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Sat, 03 Apr 2021 17:05:33 +0200

ldap-account-manager (7.5-1) unstable; urgency=medium

  * new upstream release
  * Fix "node-uglify is deprecated in favor of uglifyjs" by using
    uglifyjs (Closes: #979896)

 -- Roland Gruber <post@rolandgruber.de>  Wed, 17 Mar 2021 17:05:33 +0200

ldap-account-manager (7.4-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Sun, 06 Dec 2020 10:05:33 +0200

ldap-account-manager (7.3-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Sun, 06 Sep 2020 19:25:33 +0200

ldap-account-manager (7.2-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Fri, 01 May 2020 08:04:56 +0200

ldap-account-manager (7.1-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Mon, 16 Mar 2020 21:24:23 +0100

ldap-account-manager (7.0-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Sat, 21 Dec 2019 19:53:45 +0100

ldap-account-manager (6.9-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Sun, 29 Sep 2019 09:12:37 +0200

ldap-account-manager (6.8-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Tue, 02 Jul 2019 12:26:45 +0200

ldap-account-manager (6.7-1) unstable; urgency=medium

  * new upstream release
  * Fix "Depends on tcpdf which is considered unfit for buster" removed
    dependency and embedded required parts (Closes: #923736)

 -- Roland Gruber <post@rolandgruber.de>  Mon, 25 Mar 2019 17:21:36 +0100

ldap-account-manager (6.6-1) unstable; urgency=medium

  * new upstream release

 -- Roland Gruber <post@rolandgruber.de>  Fri, 28 Dec 2018 11:08:14 +0100
